added unit tests and more functionality